--- a/src/main/resources/templates/ticket.html
+++ b/src/main/resources/templates/ticket.html
@@ -71,7 +71,7 @@
                                                 </tr>
                                                 <tr>
                                                     <td style="font-size: 14px; line-height: 18px; color: #666666;">
-                                                        Movie: <span th:text="'[ '+${ticket.movieTitle}"></span>
+                                                        Movie: <span th:text="'[ '+${ticket.movieTitle}+' ]'"></span>
                                                     </td>
                                                 </tr>
                                                 <tr>
@@ -157,17 +157,17 @@
                                                 </tr>
                                                 <tr>
                                                     <td style="width: 55%; font-size: 14px; line-height: 18px; color: #666666;">
-                                                        [Payment Method]: <span th:text="${payment.cardType}"></span>
+                                                        Payment Method : <span th:text="${payment.cardType}"></span>
                                                     </td>
                                                 </tr>
                                                 <tr>
 													<td style="width: 45%; font-size: 14px; line-height: 18px; color: #666666;">
-                                                        Card Number: <span th:text="${payment.cardNumber}"></span>
+                                                        Card Number : <span th:text="${payment.cardNumber}"></span>
                                                     </td>
 												</tr>
                                                 <tr>
                                                     <td style="width: 55%; font-size: 14px; line-height: 18px; color: #666666; padding-bottom: 10px;">
-                                                        Expiry Date: <span th:text="${payment.expiryMonth}+'/'+${payment.expiryYear}"></span>
+                                                        Expiry Date : <span th:text="${payment.expiryMonth}+'/'+${payment.expiryYear}"></span>
                                                     </td>
                                                 </tr>
                                                 <tr>
